[package]
name = "warp-sudoku-solver"
version = "0.1.1"
authors = ["Rrogntudju"]
edition = "2018"

[dependencies]
warp = "0.3"
tokio ={version = "1.9", features = ["macros", "rt-multi-thread"]} 
serde_json = "1"
serde = {version = "1", features = ['derive']}
sudoku = { git = "https://github.com/Rrogntudju/sudoku-rs.git" }

[profile.release]
opt-level = 3
lto = "fat" 
codegen-units = 1